# shoppinglist

./: CMakeLists.txt  README.md  ShoppingList.cpp  ShoppingList.h  ShoppingObject.cpp  ShoppingObject.h  commands.cpp  commands.h  main.cpp
test/: CMakeLists.txt  CommandsTest.cpp  ShoppingListTest.cpp  ShoppingObjectTest.cpp  runAllTests.cpp
test/lib/docs/: pkgconfig.md
test/lib/docs/_layouts/: default.html
test/lib/googletest/include/gtest/: gtest-param-test.h
test/lib/googletest/include/gtest/internal/: gtest-port.h
